# reinforced-multi-robot-control

./: README.md  requirements.txt
multi_mir_gazebo/: CMakeLists.txt  package.xml
multi_mir_gazebo/launch/: multi_robot_simulation.launch  spawn_map_mir.launch.xml
multi_mir_gazebo/launch/includes/: ekf.launch.xml
multi_mir_gazebo/maps/: map_mir_1_595x386.yaml
multi_mir_gazebo/scripts/: multi_robot_lidar_merger.py  namespaced_lidar_merger.py
multi_mir_gazebo/sdf/map_mir/: model.sdf
multi_mir_gazebo/sdf/map_mir_1/: model.config  model.sdf
multi_mir_gazebo/sdf/map_mir_multi/: model.config  model.sdf
multi_mir_gazebo/sdf/unit_box/: model.sdf
multi_mir_gazebo/worlds/: empty.world  kho_hang.world
multi_mir_robot_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
multi_mir_robot_description/config/: diffdrive_controller_1.yaml  diffdrive_controller_2.yaml  diffdrive_controller_3.yaml
multi_mir_robot_description/launch/: controller_spawner.launch  mir_debug_urdf.launch  upload_mir_urdf.launch
multi_mir_robot_description/urdf/: mir.urdf.xacro
multi_mir_robot_description/urdf/include/: mir_100_v1.urdf.xacro
multi_robot_mir_control/: CMakeLists.txt  graph_editor.py  package.xml  run_robot.py  run_training.py
multi_robot_mir_control/RUN/Path/: generate_path_library.py  path_broadcaster.py  path_provider_node.py  task_manager.py
multi_robot_mir_control/config/: config.yaml
multi_robot_mir_control/core/: memory.py  trainer.py
multi_robot_mir_control/data/: map_data.json  missions.json  robot_status.json  tasks.json
multi_robot_mir_control/env/: __init__.py  environment.py
multi_robot_mir_control/env/include/: __init__.py  observation_calculator.py  reward_calculator.py  robot_controller.py  robot_state.py
multi_robot_mir_control/launch/: run.launch  train.launch
multi_robot_mir_control/models/: policy.py  value.py
multi_robot_mir_control/multi_robot_dashboard/: app.py
multi_robot_mir_control/multi_robot_dashboard/assets/: custom_styles.css
multi_robot_mir_control/multi_robot_dashboard/components/: sidebar.py  utils.py
multi_robot_mir_control/multi_robot_dashboard/components/control_panel/: callbacks.py  layout.py
multi_robot_mir_control/multi_robot_dashboard/components/header/: callbacks.py
multi_robot_mir_control/multi_robot_dashboard/components/map_viewer/: callbacks.py  layout.py
multi_robot_mir_control/multi_robot_dashboard/pages/page_control/: callbacks.py  layout.py
multi_robot_mir_control/multi_robot_dashboard/pages/page_map_editor/: callbacks.py  layout.py
multi_robot_mir_control/multi_robot_dashboard/pages/page_start/: callbacks.py  layout.py
multi_robot_mir_control/multi_robot_dashboard/ros_comms/: ros_handler.py
multi_robot_mir_control/saved_models/: obs_normalizer_final.pkl  policy_net_cycle_1000.pth  policy_net_final_1851.pth  training_log.csv  value_net_cycle_1000.pth  value_net_final_1851.pth
multi_robot_mir_control/srv/: ProvidePath.srv  RequestPath.srv
multi_robot_mir_control/train/: __init__.py  config_manager.py  model_manager.py  system_controller.py  training_orchestrator.py
multi_robot_mir_control/utils/: logger.py  normalizer.py  plotter.py  setup.py  training_logger.py
