<?xml version="1.0"?>
<package format="2">
  <name>multi_robot_mir_control</name> <!-- THAY BẰNG TÊN PACKAGE CỦA BẠN -->
  <version>0.1.0</version>
  <description>The multi_robot_mir_control package for multi-robot path following with RL.</description>

  <!-- Tác giả và người bảo trì -->
  <maintainer email="vunguyen101003@gmail.com">nguyen</maintainer>
  <author email="vunguyen101003@gmail.com">nguyen</author>

  <!-- Giấy phép, ví dụ: Apache 2.0, BSD, MIT -->
  <license>TODO</license>

  <!-- URL của dự án (tùy chọn) -->
  <!-- <url type="website">http://wiki.ros.org/mir_control</url> -->

  <!-- Các công cụ cần thiết để build package -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Các package cần thiết trong quá trình build -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <!-- **QUAN TRỌNG:** Thêm dependency này để tạo message/service -->
  <build_depend>message_generation</build_depend>

  <!-- Các package cần thiết khi export (thường giống build_depend) -->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <!-- Các package cần thiết khi chạy (runtime) -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <!-- **QUAN TRỌNG:** Thêm dependency này để chạy các chương trình sử dụng message/service đã tạo -->
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>